--- a/leaflet/templates/leaflet/widget.html
+++ b/leaflet/templates/leaflet/widget.html
@@ -7,6 +7,10 @@
     {% endblock map_css %}
 </style>
 
+<!-- TODO: Move files to static-->
+<link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"/>
+<script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+
 <script>
     {% block vars %}var {{ module }} = {};
     {{ module }}.fieldid = '{{ id_css }}';
